--- a/index.html
+++ b/index.html
@@ -277,21 +277,63 @@
                         <span
                             class="absolute top-1/2 left-1/2 text-2xl font-semibold text-white -translate-x-1/2 -translate-y-1/2 sm:text-3xl dark:text-gray-800">First
                             Slide</span>
-                        <img src="https://flowbite.com/docs/images/carousel/carousel-1.svg"
+                        <img src="./img/p-1.png"
                             class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
-                            alt="..." />
+                            alt="p-1" />
                     </div>
                     <!-- Item 2 -->
                     <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                        <img src="https://flowbite.com/docs/images/carousel/carousel-2.svg"
+                        <img src="./img/p-2.png"
                             class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
-                            alt="..." />
+                            alt="p-2" />
                     </div>
                     <!-- Item 3 -->
                     <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                        <img src="https://flowbite.com/docs/images/carousel/carousel-3.svg"
+                        <img src="./img/p-3.png"
                             class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
-                            alt="..." />
+                            alt="p-3" />
+                    </div>
+                    <!-- Item 4 -->
+                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                        <img src="./img/p-4.png"
+                            class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                            alt="p-4" />
+                    </div>
+                    <!-- Item 5 -->
+                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                        <img src="./img/p-5.png"
+                            class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                            alt="p-5" />
+                    </div>
+                    <!-- Item 6 -->
+                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                        <img src="./img/p-6.png"
+                            class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                            alt="p-6" />
+                    </div>
+                    <!-- Item 7 -->
+                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                        <img src="./img/p-7.png"
+                            class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                            alt="p-7" />
+                    </div>
+                    <!-- Item 8 -->
+                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                        <img src="./img/p-8.png"
+                            class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                            alt="p-8" />
+                    </div>
+                    <!-- Item 9 -->
+                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                        <img src="./img/p-9.png"
+                            class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                            alt="p-9" />
+                    </div>
+                    <!-- Item 10 -->
+                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                        <img src="./img/p-10.png"
+                            class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+                            alt="p-10" />
                     </div>
                 </div>
                 <!-- Slider indicators -->
@@ -312,7 +354,7 @@
                     class="grid absolute top-0 left-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
                     data-carousel-prev>
                     <span
-                        class="inline-grid justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+                        class="inline-grid justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-gray-600/30 dark:bg-gray-800/30 group-hover:bg-gray-600/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
                         <svg class="w-5 h-5 text-white sm:w-6 sm:h-6 dark:text-gray-800" fill="none"
                             stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7">
@@ -325,7 +367,7 @@
                     class="grid absolute top-0 right-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
                     data-carousel-next>
                     <span
-                        class="inline-grid justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+                        class="inline-grid justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-gray-600/30 dark:bg-gray-800/30 group-hover:bg-gray-600/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
                         <svg class="w-5 h-5 text-white sm:w-6 sm:h-6 dark:text-gray-800" fill="none"
                             stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7">
@@ -381,14 +423,18 @@
                         </svg>
                     </button>
                 </div>
-                    <div class="flex-none flex items-center justify-center rounded-md h-12 w-12" >
-                        <img class="ml-12 mr-3 mb-8" src="./img/Pretend_Play_icon.png" alt="Pretend Play">
-                        <img class="mb-8" src="./img/Carbon_Green_icon_no_text.png" alt="Carbon Green">
+                    <div class="flex items-center justify-center rounded-md h-12 w-12 mb-6 gap-4 ml-10" >
+                        <img src="./img/Pretend_Play_icon.png" alt="Pretend Play">
+                        <img src="./img/Carbon_Green_icon_no_text.png" alt="Carbon Green">
                     </div>
-                    <h1 class="mb-8 text-3xl text-gray-500">3Yrs+</h1>
-                    <div class="flex-none flex items-center justify-center rounded-md h-12 w-12" >
-                        <img class="ml-12 mr-3 mb-5" src="./img/Pretend_Play_icon.png" alt="Pretend Play">
-                        <img class="mb-5" src="./img/Carbon_Green_icon_no_text.png" alt="Carbon Green">
+                    <h1 class="mb-6 text-3xl text-gray-500">3Yrs+</h1>
+                    <div class="flex items-center justify-center rounded-md h-12 w-12 gap-4 ml-36" >
+                        <img src="./img/creative.svg" width="40px" height="40px"></img>        
+                        <img src="./img/imagination.svg" width="40px" height="40px"></img>
+                        <img src="./img/social.svg" width="40px" height="40px"></img>
+                        <img src="./img/language.svg" width="40px" height="40px"></img>
+                        <img src="./img/coordination.svg" width="40px" height="40px"></img>
+                        <img src="./img/emotional.svg" width="40px" height="40px"></img>
                     </div>
             </form>
         </div>
