--- a/index.html
+++ b/index.html
@@ -616,14 +616,14 @@
             <a class="link link-hover text-gray-500">PlanHome</a>
         </div>
         <div>
-            <span class="footer-title-2">Shop and Learn</span>
+            <span class="footer-title-2 text-2xl text-gray-700">Shop and Learn</span>
             <a class="link link-hover text-gray-500">Toys</a>
             <a class="link link-hover text-gray-500">Child Development</a>
             <a class="link link-hover text-gray-500">Blog</a>
             <a class="link link-hover text-gray-500">FAQ</a>
         </div>
         <div>
-            <span class="footer-title-3">About Plantoys</span>
+            <span class="footer-title-3 text-2xl text-gray-700">About Plantoys</span>
             <a class="link link-hover text-gray-500">About Us</a>
             <a class="link link-hover text-gray-500">Mission</a>
             <a class="link link-hover text-gray-500">Sustainability</a>
@@ -632,7 +632,7 @@
             <a class="link link-hover text-gray-500">Worldwide Office</a>
         </div>
         <div>
-            <span class="footer-title">Social</span>
+            <span class="footer-title text-2xl text-gray-700">Social</span>
             <div class="grid grid-flow-col gap-4">
                 <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                         class="fill-current">
